# FinBot

./: README.md
Backend/: .gitignore  main.py  pyproject.toml  scraper.ipynb
Backend/src/handlers/: AnswerGenerator.py
Backend/src/helpers/: OpenAIHelper.py  PromptTemplate.py
Backend/src/middleware/: PrefixMiddleware.py
Backend/src/models/: FaissClient.py
Backend/src/utils/: Logger.py
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/components/: chat-interface.tsx  header.tsx
