[project]
name = "finbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "openai>=2.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
